test/classes/initializers/parentCall/inLoop.good
inLoop.chpl:4: In initializer:
inLoop.chpl:13: error: use of 'init this' call in loop body
